--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	<body>
 		<h1>Storytelling Projects</h1>
 		<p>Kate Bennion</p>
-
+		<p><a href="project1">project 1: national park popularity</a></p>
 	</body>
 </html>
