--- a/project1/index.html
+++ b/project1/index.html
@@ -13,13 +13,13 @@
 <h1>The Big 5</h1>
 		<div id="visitors_century"></div>
 
+		<!-- (a visualization I have yet to wrangle)
 		<h2>Visitors By Month in 2015 (the color is according to temperature!)</h2>
-		<div id="visitors_month"></div>
+		<div id="visitors_month"></div> -->
 
 		<!-- This is D3, our graphing library -->
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.2/d3.min.js"></script>
-
-		<!-- Now we include our actual visualization -->
 	    <script src="visitors_century.js"></script>
-	    <script src="visitors_month"></script>
+	    <!--
+	    <script src="visitors_month.js"></script> -->
 	    
