--- a/project1/index.html
+++ b/project1/index.html
@@ -10,7 +10,7 @@
 
 	<body>
 <p><a href="..">Back to all projects</a></p>
-<h1>The Big 5</h1>
+<h1>Annual Visitors to America's Most Popular Nat'l Parks</h1>
 		<div id="visitors_century"></div>
 
 		<!-- (a visualization I have yet to wrangle)
@@ -20,6 +20,6 @@
 		<!-- This is D3, our graphing library -->
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.2/d3.min.js"></script>
 	    <script src="visitors_century.js"></script>
-	    <!--
-	    <script src="visitors_month.js"></script> -->
+	    <!-- 
+	    <script src="visitors_month"></script> -->
 	    
