--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 		<h1>Storytelling Projects</h1>
 		<p>Kate Bennion</p>
 		<p><a href="project1">project 1: national park popularity</a></p>
+		<p><a href="project2">project 2: life expectancy 'round the world</a></p>
 	</body>
 </html>
