--- a/project2/index.html
+++ b/project2/index.html
@@ -38,8 +38,8 @@
   <body>
   <p><a href="..">Back to all projects</a></p>
     <div class="container">
-      <h1>Hello, world!</h1>
-      <h4>Test</h4>
+      <h1>Life expectancy, over time</h1>
+      <h4>Click on a country to see how GDP changed as well.</h4>
 
       <div class="row">
         <div class="col-md-8">
@@ -84,7 +84,7 @@
       </div>
     </div>
       <div id="country-display">
-        <strong>Currently selected:</strong>
+        <strong>Country:</strong>
         <span id="selected">Nothing</span>
       </div>
 
