--- a/project2/index.html
+++ b/project2/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Template</title>
+    <title>Life Expectancy On Our Planet, Recently</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -40,10 +40,13 @@
     <div class="container">
       <h1>Life expectancy, over time</h1>
       <h4>Click on a country to see how GDP changed as well.</h4>
+      <p>(It's by me + <a href="http://getbootstrap.com">Bootstrap</a>.)</p>
 
       <div class="row">
         <div class="col-md-8">
           <div id="chart-2">
+
+
 
   <select id="named-select">
   <option value="Africa">Africa</option>
@@ -54,7 +57,7 @@
   <option value="S-America">South America</option>
 </select>
 
-
+  
  <!--
        <button id="small-button">Small countries</button>
       <button id="no-tiny-button">No tiny countries</button>
@@ -81,12 +84,17 @@
           <p>It's by me + <a href="http://getbootstrap.com">Bootstrap</a></p>
         </div>
 -->
+
+
       </div>
+
     </div>
-      <div id="country-display">
+   
+       <div id="country-display">
         <strong>Country:</strong>
         <span id="selected">Nothing</span>
       </div>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
