--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 		<p>Kate Bennion</p>
 		<p><a href="project1">project 1: national park popularity</a></p>
 		<p><a href="project2">project 2: life expectancy 'round the world</a></p>
+		<p><a href="project3">project 3: american ufos in 2015</a></p>
 	</body>
 </html>
